# HydPyHack2025

./: .gitignore  README.md  env.example  main.py  pyproject.toml  yoyo.ini
fintechagent/: __init__.py  agent.py  audio.py  cutomer.py  defaults.py  product.py
migrations/: 20250215_01_xDH6D-init.rollback.sql  20250215_01_xDH6D-init.sql
products/: fuel - IndianOil RBL Bank XTRA Credit Card  generic - Platinum ValuePlus Credit Card  movies - Movies and More Credit Card  train - IRCTC RBL Bank Credit Card  travel - World Safari Credit Card
test/: test_agent.py  test_audio.py  test_db.py  test_llm.py  test_product.py
